--- a/css/estilos.css
+++ b/css/estilos.css
@@ -130,8 +130,23 @@ body{
 
     /*SECCIÓN NEW IN*/
 
-    .carousel__img--tamaño{
+    .carousel-item img{
+        height: 900px;
+        width: auto;
+
         margin: 50px auto 0 auto;
+    }
+
+    .carousel-item button{
+        margin-top: 20px;
+        padding: 10px 40px;
+
+        color: white;       
+    }
+
+    .carousel-item button:hover{
+        background-color: rgb(234 155 187 / 60%); 
+        border-radius: 10px;     
     }
 
     /*SECCIÓN TIENDA*/
@@ -195,62 +210,21 @@ body{
         padding: 50px 40px;
     }
 
-    .seccion__galeria--container{
-        display: grid;
-        grid-template-areas:
-        "uno dos tres"
-        "cuatro cuatro cinco"
-        "cuatro cuatro seis";
+    .seccion__galeria--grid img{
+        filter: grayscale(100%);
+        transition: all 0.3s; 
+    }   
 
-        margin: 0 40px;
+    .seccion__galeria--grid img:hover{
+        filter: grayscale(0%);
+        transition: all 0.3s; 
     }
 
-    .seccion__galeria--container div{
-        display: grid;
-        justify-content: center;
-
-        border: 2px solid rgb(250, 145, 227);
-
-        padding: 10px;
-    }
-
-    .seccion__galeria--container img{
-        border: 10px solid white;
-
-        width: 400px;
-        height: 500px;
-    }
-
-    .seccion__galeria--container video{
-        border: 10px solid white;
-
-        width: auto;
-        height: auto;
-    }
-
-    .valor1{
-        grid-area: uno;
-    }
-
-    .valor2{
-        grid-area: dos;
-    }
-
-    .valor3{
-        grid-area: tres;
-    }
-
-    .valor4{
-        grid-area: cuatro;
-    }
-
-    .valor5{
-        grid-area: cinco;
-    }
-
-    .valor6{
-        grid-area: seis;
-    }
+    .seccion__galeria--grid video{
+     display: flex;
+     width: 100%;
+     height: 100%;
+    }   
 
     /*SECCIÓN CONTACTO*/
 
@@ -268,21 +242,21 @@ body{
         border: 1px solid white;
     }
 
-    .form-control:focus {
+    .form-control:focus{
         border-color: transparent;
-       
+
         box-shadow: none;
     }
 
-    .form-control::placeholder {
-        color: rgb(234, 155, 187);
+    .form-control::placeholder{
+        color: rgb(226, 115, 160);
     }
 
     .btn{
         width: 25%;
 
-        color: rgb(234, 155, 187);
-   
+        color: rgb(226, 115, 160);
+
         background-color: rgb(234 155 187 / 40%);
         border: 1px solid white;
     }
@@ -292,11 +266,11 @@ body{
         color: white;
     }
 
-    .btn:focus {
+    .btn:focus{
         box-shadow: none;
     }
 
-    .row {
+    .row{
         margin: 30px;
     }
 
@@ -336,5 +310,44 @@ footer a:hover{
     font-size: 13px;
 
     padding-top: 30px;
+}
+
+/*Responsive*/
+
+@media screen and (min-width: 576px) and (max-width: 767px){
+
+    
+    /*SECCIÓN SOBRE MI*/
+
+    .seccion__sobreMi--flex{
+        justify-content: center;
+
+        background-position: center;
+    }
+
+    .seccion__sobreMi--flex img{
+        width: 350px;
+        height: auto;
+
+        padding-top: 80px;
+    }
+
+    .seccion__sobreMi--flex p{
+        text-align: center;
+
+        width: auto;  
+
+        padding: 50px 20px 0 20px;
+    }
+
+    /*SECCIÓN NEW IN*/
+
+    .carousel-item img{
+        height: 500px;
+    }
+
+    .carousel-item h5{
+        font-size: 15px;
+    }
 }
 
